# DEPOS

./: ...  .clang-format  .clang-tidy  .elf  .gitignore  4  LICENSE  Linker  Linker.ld  Makedefs.mk  Makefile  Meta  README.md  TESTE  ]  buildConfig  compile_commands.json  firmware.img  guest.dts  linker.ld  log.txt  main.c  mkimage  run
app/: App.cpp  Makefile  Philosophers.cpp  RTApp.cpp
app/Alarm/: Alarm.cpp
app/App/: App.cpp  Traits.hpp
app/CAN/: main.cpp
app/EPOS/: Makefile  Traits.hpp  main.cpp
app/Ethernet/: Ethernet.cpp  Traits.hpp  main.cpp
app/HelloWorld/: HelloWorld.cpp  Traits.hpp  main.cpp
app/Hypervisor/: main.cpp
app/I2C/: main.cpp
app/Linux/: Linux.cpp  Makefile  Traits.hpp  guest.dtb  guest.dtb.inc  guest.dts  initramfs.cpio  main.cpp
app/Loader/: Loader.cpp
app/Memory/: main.cpp
app/SmartData/smartdata/: CMakeLists.txt  Makefile  real-hardware-integration-autorun
app/SmartData/smartdata/app/: main_av_artery.cpp  main_av_carla.cpp  main_basic_example.cpp  main_basic_example_seu.cpp  main_read_and_get_mvs.cpp  main_read_sensors_hardware.cpp
app/SmartData/smartdata/app/deprecated/: main.cpp  main_av_ampera.cpp
app/SmartData/smartdata/app/test/: main_read_carla_telemetry_local.cpp
app/SmartData/smartdata/app/tests/: SEU-IOT.cpp
app/SmartData/smartdata/include/: assert.h  boolean_filters.h  main_traits.h  seu.h  smartdata.h  transducer.h  transformer.h
app/SmartData/smartdata/include/architecture/: cpu.h  traits.h  tsc.h
app/SmartData/smartdata/include/machine/: aes.h  nic.h  udpnic.h
app/SmartData/smartdata/include/network/: ethernet.h  only_data_udp_wrapper.h
app/SmartData/smartdata/include/network/tstp/: locator.h  manager.h  security.h  timekeeper.h  tstp.h
app/SmartData/smartdata/include/system/: meta.h  thread.h  traits.h  types.h
app/SmartData/smartdata/include/transducers/: old_carla_project.h
app/SmartData/smartdata/include/transducers/av/: battery.h  brake.h  brake_carla_wrapper.h  camera.h  camera_carla_wrapper.h  camera_luxonois_oakd_shared_memory.h  co2_emission.h  destination.h  drag.h  drag_wrapper.h  engine_rpm.h  engine_rpm_carla_wrapper.h  etsi_cam.h  fake_data.h  fuel_artery_wrapper.h  gear.h  gear_carla_wrapper.h  gnss_lpms_ig1p.h  gps.h  hand_brake.h  imu.h  imu_lpms_ig1p.h  lidar.h  lpms_ig1p.h  map.h  mass.h  mass_carla_wrapper.h  odometer_carla_wrapper.h  radar.h  radar_carla_wrapper.h  reverse.h  speed.h  steer.h  steer_carrla_wrapper.h  throttle.h  wheel_telemetry.h
app/SmartData/smartdata/include/transformers/av/: dynamics_state.h  dynamics_state_kf_on_hardware.h  dynamics_state_python_wrapper.h  high_level_control.h  high_level_control_python_wrapper.h  motion_planning.h  object_recognition_and_tracking.h  path_planning.h  path_planning_python_wrapper.h  pdm_suspension.h  visual_vibration_detection.h  visual_vibration_detection_cpp.h
app/SmartData/smartdata/include/transformers/example/: temperature_adjust.h
app/SmartData/smartdata/include/utility/: aes.h  buffer.h  debug.h  geometry.h  lidar_viewer.h  list.h  math.h  ostream.h  poly1305.h  random.h  stl.h
app/SmartData/smartdata/include/utility/iot/: log_sender.h
app/SmartData/smartdata/lib/: .gitignore  Makefile  dlprimitives.patch
app/SmartData/smartdata/src/network/tstp/: locator.cc  manager.cc  router.cc  security.cc  timekeeper.cc  tstp.cc  tstp_init.cc
app/SmartData/smartdata/src/system/: thread.cc
app/SmartData/smartdata/src/utility/: aes.cc  bignum.cc  ostream.cc
gcm.cache/: CPU.gcm  Definitions.gcm  Logger.gcm  Memory.gcm  Semaphore.gcm  Thread.gcm  UART.gcm
include/: AddressSpace.hpp  Alarm.hpp  Alarm.hpp.bak  Application.hpp  Applications.hpp  BootInformation.hpp  CPU.hpp  ConditionalVariable.hpp  ELF.hpp  Heap.hpp  Initializer.hpp  Language.hpp  Latch.hpp  Lists.hpp  Machine.hpp  Machine.hpp.bak  Macros.hpp  Memory.hpp  Meta.hpp  Mutex.hpp  Payload.hpp  PeriodicThread.hpp  Resource.hpp  Scheduler.hpp  Semaphore.hpp  Settings.hpp  Spin.hpp  Task.hpp  Thread.hpp  Thread.hpp.bak  Timer.hpp  Timer.hpp.bak  Traits.hpp  Traits.hpp.bak  Traits.hpp.gch  Types.hpp  Variadic.hpp  cpu.h  cpu.hpp  definitions.h  (+14 more)
modules/: Alarm.cpp  CPU.cpp  Definitions.cpp  Machine.cpp  Memory.cpp  Meta.cpp  Semaphore.cpp  Settings.cpp  Thread.cpp  Timer.cpp
payload/: Makefile  Template.mk
src/: Alarm.cpp  App.cpp  CPU.cc  Heap.cpp  Kernel.cpp  Kernel.cpp.bak  Memory.cpp  Spin.cpp  Thread.cpp  Thread.cpp.bak  Timer.cpp  app.cpp  bootloader.cc  bootloader.cpp  cpu.c  cpu.cpp  init.cpp  kernel.c  kernel.cpp  main.c  memory.c  memory.cc  memory.cpp  thread.cpp
tools/: ELFParser.cpp  EMap.cpp  EPrint  ElfPrint  Mapper.cpp  MemoryMapGenerator.cpp  Traits  Traits.cpp  TraitsLoggerGenerator
(+653 files in other folders)
